arm/template20.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {},
    "functions": [],
    "variables": {},
    "resources": [
        {
            "name": "appnetwork",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2023-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "SubnetA",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    },
                    {
                        "name": "SubnetB",
                        "properties": {
                            "addressPrefix": "10.0.1.0/24"
                        }
                    }
                ]
            }
        },
        {
            "name": "app-ip",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2023-11-01",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Basic"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            }
        },
        {
            "name": "app-interface",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2023-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', 'appnetwork')]",
                "[resourceId('Microsoft.Network/publicIPAddresses', 'app-ip')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'appnetwork', 'SubnetA')]"
                            },
                            "publicIPAddress":{
                                "id":"[resourceId('Microsoft.Network/publicIPAddresses','app-ip')]"
                            }
                        }
                    }
                    
                ],
                "networkSecurityGroup": {
                    "id":"[resourceId('Microsoft.Network/networkSecurityGroups','app-nsg')]"
                }
            }
        },
        {
            "name": "app-nsg",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow-RDP",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Allow-HTTP",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "vmstore4434434556",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2023-04-01",
            "location": "northeurope",
            "kind": "StorageV2",
            "sku": {
                "name": "Standard_LRS"
            }
        },
        {
    "name": "[concat('appvm','/config-app')]",
    "type": "Microsoft.Compute/virtualMachines/extensions",
    "apiVersion": "2021-04-01",
    "location": "[resourceGroup().location]",
    "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', 'appvm')]"
    ],
    "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.7",
        "autoUpgradeMinorVersion": true,
        "settings": {
            "fileUris": [
                "https://appstore554553443.blob.core.windows.net/scripts/IIS.ps1?sp=r&st=2024-08-29T05:33:09Z&se=2024-08-29T13:33:09Z&spr=https&sv=2022-11-02&sr=b&sig=ZKNg5Pp3E%2F0yof1bOGLMQKeteVxpMzJ420IYOcFeKrI%3D"
            ]
        },
        "protectedSettings": {
            "commandToExecute": "powershell -ExecutionPolicy Unrestricted -File IIS.ps1"
        }
    }
  },
        {
    "name": "appvm",
    "type": "Microsoft.Compute/virtualMachines",
    "apiVersion": "2024-07-01",
    "location": "[resourceGroup().location]",
    "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', toLower('vmstore4434434556'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', 'app-interface')]"
    ],
    "properties": {
        "hardwareProfile": {
            "vmSize": "Standard_D2s_v3"
        },
        "osProfile": {
            "computerName": "appvm",
            "adminUsername": "appusr",
            "adminPassword": "Azure@123"
        },
        "storageProfile": {
            "imageReference": {
                "publisher": "MicrosoftWindowsServer",
                "offer": "WindowsServer",
                "sku": "2022-Datacenter",
                "version": "latest"
            },
            "osDisk": {
                "name": "windowsVM1OSDisk",
                "caching": "ReadWrite",
                "createOption": "FromImage"
            }
        },
        "networkProfile": {
            "networkInterfaces": [
                {
                    "id": "[resourceId('Microsoft.Network/networkInterfaces', 'app-interface')]"
                }
            ]
        },
        "diagnosticsProfile": {
            "bootDiagnostics": {
                "enabled": true,
                "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', toLower('vmstore4434434556')), '2023-01-01').primaryEndpoints.blob]"
            }
        }
    }
}
    ],
    "outputs": {}
}
